pictures added but not working

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="content">
       <!-- First News Column -->
       <div class="column large">
-        <div class="lead story">
+        <div class="lead-story">
           <div class="image-content">
             <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "feeling funny."</span>
           </div>
